fix listViewsPagedGlobally doc

--- a/docs/static/rest-catalog-open-api.yaml
+++ b/docs/static/rest-catalog-open-api.yaml
@@ -1098,10 +1098,10 @@ paths:
           $ref: '#/components/responses/DatabaseNotExistErrorResponse'
         "500":
           $ref: '#/components/responses/ServerErrorResponse'
-  /v1/{prefix}/view-summaries:
+  /v1/{prefix}/views:
     get:
       tags:
-        - table
+        - view
       summary: List views globally
       operationId: listViewsGlobally
       description: List views globally which matches the given database name pattern and view name pattern both.
