create paimon-iceberg module

--- a/paimon-iceberg/pom.xml
+++ b/paimon-iceberg/pom.xml
@@ -46,5 +46,12 @@ under the License.
             <version>${iceberg.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.iceberg</groupId>
+            <artifactId>iceberg-aws</artifactId>
+            <version>${iceberg.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
+
