provided to compile

--- a/paimon-iceberg/pom.xml
+++ b/paimon-iceberg/pom.xml
@@ -50,7 +50,7 @@ under the License.
             <groupId>org.apache.iceberg</groupId>
             <artifactId>iceberg-aws</artifactId>
             <version>${iceberg.version}</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
