add function usage in spark

--- a/docs/static/rest-catalog-open-api.yaml
+++ b/docs/static/rest-catalog-open-api.yaml
@@ -2021,7 +2021,7 @@ components:
     FunctionFileResource:
       type: object
       properties:
-        definition:
+        resourceType:
           type: string
         uri:
           type: string
