--- a/.github/workflows/utitcase-spark-3.x.yml
+++ b/.github/workflows/utitcase-spark-3.x.yml
@@ -45,7 +45,7 @@ jobs:
           java-version: ${{ env.JDK_VERSION }}
           distribution: 'temurin'
       - name: Build Spark
-        run:  mvn -T 2C -B clean install -DskipTests -pl "!paimon-iceberg"
+        run:  mvn -T 2C -B clean install -DskipTests
       - name: Test Spark
         timeout-minutes: 60
         run: |
