--- a/.github/workflows/utitcase-jdk11.yml
+++ b/.github/workflows/utitcase-jdk11.yml
@@ -41,7 +41,7 @@ jobs:
           java-version: ${{ env.JDK_VERSION }}
           distribution: 'temurin'
       - name: Build
-        run:  mvn -T 1C -B clean install -DskipTests
+        run:  mvn -T 1C -B clean install -DskipTests -Pflink1,spark3
       - name: Test
         run: |
           # run tests with random timezone to find out timezone related bugs
