--- a/.github/workflows/utitcase.yml
+++ b/.github/workflows/utitcase.yml
@@ -63,6 +63,6 @@ jobs:
             TEST_MODULES+="!org.apache.paimon:paimon-spark-${suffix},"
           done
           TEST_MODULES="${TEST_MODULES%,}"
-          mvn -T 2C -B clean install -pl "${TEST_MODULES}" -Pflink1,spark3 -Pskip-paimon-flink-tests -Duser.timezone=$jvm_timezone
+          mvn -T 2C -B clean install -pl "${TEST_MODULES}" -Pskip-paimon-flink-tests -Duser.timezone=$jvm_timezone
         env:
           MAVEN_OPTS: -Xmx4096m -XX:+UseG1GC -XX:CICompilerCount=2
