--- a/paimon-spark/paimon-spark-4.0/pom.xml
+++ b/paimon-spark/paimon-spark-4.0/pom.xml
@@ -32,7 +32,7 @@ under the License.
     <name>Paimon : Spark : 4.0</name>
 
     <properties>
-        <spark.version>4.0.0-preview2</spark.version>
+        <spark.version>4.0.0</spark.version>
     </properties>
 
     <dependencies>
