--- a/paimon-service/paimon-service-runtime/pom.xml
+++ b/paimon-service/paimon-service-runtime/pom.xml
@@ -25,7 +25,7 @@ under the License.
     <parent>
         <groupId>org.apache.paimon</groupId>
         <artifactId>paimon-service</artifactId>
-        <version>1.2-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
 
     <artifactId>paimon-service-runtime</artifactId>
