--- a/docs/config.toml
+++ b/docs/config.toml
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-baseURL = '//paimon.apache.org/docs/master'
+baseURL = '//paimon.apache.org/docs/release-1.2'
 languageCode = 'en-us'
 title = 'Apache Paimon'
 enableGitInfo = false
@@ -24,7 +24,7 @@ pygmentsUseClasses = true
 [params]
   # Flag whether this is a stable version or not.
   # Used for the quickstart page.
-  IsStable = false
+  IsStable = true
 
   # Flag to indicate whether an outdated warning should be shown.
   ShowOutDatedWarning = false
@@ -34,14 +34,14 @@ pygmentsUseClasses = true
   # we change the version for the complete docs when forking of a release branch
   # etc.
   # The full version string as referenced in Maven (e.g. 1.2.1)
-  Version = "1.2-SNAPSHOT"
+  Version = "1.2.0"
 
   # For stable releases, leave the bugfix version out (e.g. 1.2). For snapshot
   # release this should be the same as the regular version
-  VersionTitle = "1.2-SNAPSHOT"
+  VersionTitle = "1.2"
 
   # The branch for this version of Apache Paimon
-  Branch = "master"
+  Branch = "release-1.2"
 
   # The most recent supported Apache Flink version
   FlinkVersion = "1.20"
@@ -64,7 +64,7 @@ pygmentsUseClasses = true
   # of the menu
   MenuLinks = [
     ["Project Homepage", "//paimon.apache.org"],
-    ["JavaDocs", "//paimon.apache.org/docs/master/api/java/"],
+    ["JavaDocs", "//paimon.apache.org/docs/release-1.2/api/java/"],
   ]
 
   StableDocs = "https://paimon.apache.org/docs/1.0"
