--- a/pom.xml
+++ b/pom.xml
@@ -421,6 +421,7 @@ under the License.
                 <test.flink.version>1.20.1</test.flink.version>
             </properties>
             <modules>
+                <module>paimon-flink/paimon-flink1-common</module>
                 <module>paimon-flink/paimon-flink-1.15</module>
                 <module>paimon-flink/paimon-flink-1.16</module>
                 <module>paimon-flink/paimon-flink-1.17</module>
@@ -446,6 +447,7 @@ under the License.
                 <test.flink.version>2.0.0</test.flink.version>
             </properties>
             <modules>
+                <module>paimon-flink/paimon-flink2-common</module>
                 <module>paimon-flink/paimon-flink-2.0</module>
             </modules>
             <activation>
