--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@ under the License.
     <artifactId>paimon-parent</artifactId>
     <groupId>org.apache.paimon</groupId>
     <name>Paimon : </name>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2.0</version>
     <packaging>pom</packaging>
 
     <url>https://paimon.apache.org</url>
@@ -74,7 +74,7 @@ under the License.
     </modules>
 
     <properties>
-        <project.build.outputTimestamp>2025-04-14T05:56:01Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2025-06-16T16:19:38Z</project.build.outputTimestamp>
         <paimon.shade.version>0.8.0</paimon.shade.version>
         <paimon.shade.jackson.version>2.14.2</paimon.shade.jackson.version>
         <paimon.shade.guava.version>30.1.1-jre</paimon.shade.guava.version>
