--- a/docs/static/rest-catalog-open-api.yaml
+++ b/docs/static/rest-catalog-open-api.yaml
@@ -333,7 +333,7 @@ paths:
       tags:
         - table
       summary: List tables globally
-      operationId: List tables globally
+      operationId: ListTablesGlobally
       description: list tables paged globally which matches the given database name pattern and table name pattern both.
       parameters:
         - name: prefix
@@ -367,7 +367,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ListTablesResponse'
+                $ref: '#/components/schemas/ListTablesGloballyResponse'
         "401":
           $ref: '#/components/responses/UnauthorizedErrorResponse'
         "500":
@@ -1237,7 +1237,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ListViewsResponse'
+                $ref: '#/components/schemas/ListViewsGloballyResponse'
         "401":
           $ref: '#/components/responses/UnauthorizedErrorResponse'
         "500":
@@ -2624,7 +2624,7 @@ components:
           type: array
           items:
             type: string
-            description: table name or full table name of the table. full table name format is like "db.table"
+            description: table name of the table.
         nextPageToken:
           type: string
     ListTableDetailsResponse:
@@ -2634,6 +2634,16 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/GetTableResponse'
+        nextPageToken:
+          type: string
+    ListTablesGloballyResponse:
+      type: object
+      properties:
+        tables:
+          type: array
+          items:
+            identifier:
+              $ref: '#/components/schemas/Identifier'
         nextPageToken:
           type: string
     ConfigResponse:
@@ -2702,7 +2712,7 @@ components:
           type: array
           items:
             type: string
-            description: view name or full view name of the view. full view name format is like "db.view"
+            description: view name of the view.
         nextPageToken:
           type: string
     ListViewDetailsResponse:
@@ -2712,6 +2722,16 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/GetViewResponse'
+        nextPageToken:
+          type: string
+    ListViewsGloballyResponse:
+      type: object
+      properties:
+        tables:
+          type: array
+          items:
+            identifier:
+              $ref: '#/components/schemas/Identifier'
         nextPageToken:
           type: string
     ListFunctionsResponse:
