[core] rest: support function paged api (#5774)
(cherry picked from commit 622e41b99090394638d7323526e5e81c44cd2b4d)

--- a/docs/static/rest-catalog-open-api.yaml
+++ b/docs/static/rest-catalog-open-api.yaml
@@ -1398,6 +1398,11 @@ paths:
           in: query
           schema:
             type: string
+        - name: functionNamePattern
+          description: A sql LIKE pattern (%) for function names. Currently, only prefix matching is supported.
+          in: query
+          schema:
+            type: string
       responses:
         "200":
           description: OK
@@ -1414,7 +1419,7 @@ paths:
     post:
       tags:
         - function
-      summary: Create Function
+      summary: Create function
       operationId: createFunction
       parameters:
         - name: prefix
@@ -1445,6 +1450,97 @@ paths:
           $ref: '#/components/responses/FunctionAlreadyExistErrorResponse'
         "500":
           $ref: '#/components/responses/ServerErrorResponse'
+
+  /v1/{prefix}/databases/{database}/function-details:
+    get:
+      tags:
+        - function
+      summary: List function details
+      operationId: listFunctionDetails
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: database
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: maxResults
+          in: query
+          schema:
+            type: integer
+            format: int32
+        - name: pageToken
+          in: query
+          schema:
+            type: string
+        - name: functionNamePattern
+          description: A sql LIKE pattern (%) for function names. Currently, only prefix matching is supported.
+          in: query
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListFunctionDetailsResponse'
+        "401":
+          $ref: '#/components/responses/UnauthorizedErrorResponse'
+        "404":
+          $ref: '#/components/responses/DatabaseNotExistErrorResponse'
+        "500":
+          $ref: '#/components/responses/ServerErrorResponse'
+
+  /v1/{prefix}/functions:
+    get:
+      tags:
+        - function
+      summary: List functions globally
+      operationId: listFunctionsGlobally
+      description: List functions globally which matches the given database name pattern and function name pattern both.
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: databaseNamePattern
+          description: A sql LIKE pattern (%) for database names. All databases will be returned if not set or empty. Currently, only prefix matching is supported.
+          in: path
+          schema:
+            type: string
+        - name: functionNamePattern
+          description: A sql LIKE pattern (%) for function names. All functions will be returned if not set or empty. Currently, only prefix matching is supported.
+          in: query
+          schema:
+            type: string
+        - name: maxResults
+          in: query
+          schema:
+            type: integer
+            format: int32
+        - name: pageToken
+          in: query
+          schema:
+            type: string
+
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListFunctionsGloballyResponse'
+        "401":
+          $ref: '#/components/responses/UnauthorizedErrorResponse'
+        "500":
+          $ref: '#/components/responses/ServerErrorResponse'
+
 
   /v1/{prefix}/databases/{database}/functions/{function}:
     get:
@@ -2739,6 +2835,13 @@ components:
             $ref: '#/components/schemas/GetViewResponse'
         nextPageToken:
           type: string
+    ListFunctionsGloballyResponse:
+      type: object
+      properties:
+        functions:
+          type: array
+          items:
+            $ref: '#/components/schemas/Identifier'
     ListViewsGloballyResponse:
       type: object
       properties:
@@ -2756,6 +2859,15 @@ components:
           type: array
           items:
             type: string
+        nextPageToken:
+          type: string
+    ListFunctionDetailsResponse:
+      type: object
+      properties:
+        functionDetails:
+          type: array
+          items:
+            $ref: '#/components/schemas/GetFunctionResponse'
         nextPageToken:
           type: string
     GetFunctionResponse:
